--- a/readme.me
+++ b/readme.me
@@ -1,6 +1,12 @@
 Simple Express Proxy Server with CORS headers for binance
 
-To start the server run:
+Cone the repository:
+```https://github.com/mkruneva/express-cors-proxy.git```
+
+Install dependencies: 
+```npm i```
+
+Start the server:
 ```npm start```
 
-It will run the proxy on port :8090
+The binance proxy on port :8090
