--- a/readme.me
+++ b/readme.me
@@ -1,7 +1,7 @@
 Simple Express Proxy Server with CORS headers for binance
 
 Cone the repository:
-```https://github.com/mkruneva/express-cors-proxy.git```
+```git clone https://github.com/mkruneva/express-cors-proxy.git```
 
 Install dependencies: 
 ```npm i```
@@ -9,4 +9,4 @@ Install dependencies:
 Start the server:
 ```npm start```
 
-The binance proxy on port :8090
+The binance proxy will run on port :8090
