--- a/readme.me
+++ b/readme.me
@@ -1,12 +1,18 @@
 Simple Express Proxy Server with CORS headers for binance
 
 Cone the repository:
-```git clone https://github.com/mkruneva/express-cors-proxy.git```
+```
+git clone https://github.com/mkruneva/express-cors-proxy.git
+```
 
 Install dependencies: 
-```npm i```
+```
+npm i
+```
 
 Start the server:
-```npm start```
+```
+npm start
+```
 
 The binance proxy will run on port :8090
